--- a/hulp.html
+++ b/hulp.html
@@ -32,7 +32,7 @@
 
     <!-- navigatie-->
     <div class="navbar" id="navbar">
-        <a href="#default" id="logolink"><img id="logo"src="assets/logo.png" alt="logo Gateaulitis"></a>
+        <a href="index.html" id="logolink"><img id="logo"src="assets/logo.png" alt="logo Gateaulitis"></a>
         <div class="navbar-right">
             <div id="links">
                 <a href="index.html">home</a>
@@ -52,6 +52,7 @@
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     </div>
     
+    <!-- content-->
     <div class="container">
         
         <div class="row eerste-rij">
