--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- navigatie-->
     <div class="navbar" id="navbar">
-        <a href="#default" id="logolink"><img id="logo"src="assets/logo.png" alt="logo Gateaulitis"></a>
+        <a href="index.html" id="logolink"><img id="logo"src="assets/logo.png" alt="logo Gateaulitis"></a>
         <div class="navbar-right">
             <div id="links">
                 <a class="active" href="index.html">home</a>
@@ -45,15 +45,17 @@
             </div>
             <div id="menu_icon">
                 <a href="javascript:void(0);" class="nav_icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars d-md-none"></i>
                 </a>
             </div>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     </div>
     
+    <!-- content-->
     <div class="container-fluid">
         <div class="row home-row eerste-rij">
+            <!-- afbeelding verborgen-->
             <div class="col-md-4 home-ill d-none d-md-block"> 
                 <div class="home-ill-div">
                     <img src="assets/cupcake1.png" alt="cupcake monster">
@@ -61,10 +63,12 @@
 
             </div>
 
+            <!-- introtekst-->
             <div class="col-md-8  col-sm-12 offset-md-4 home-col-logo">
                 <div class="home-div-logo">
                     <img class="home-logo" src="assets/gateaulitis.png" alt="gateaulitis logo">
                 </div>
+
                 <div class="home-txt txt">
                     <h2>Hallo! Wij zijn vzw Cupcake Crush</h2>
                     <img class="home-ill-mobile d-md-none" src="assets/cupcake1.png" alt="cupcake monster">
@@ -73,6 +77,7 @@
                 </div>
             </div>
 
+            <!-- footer-->
             <div class="col-md-12 footer">
                 Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
             </div>
