--- a/info.html
+++ b/info.html
@@ -32,7 +32,7 @@
 
     <!-- navigatie-->
     <div class="navbar" id="navbar">
-        <a href="#default" id="logolink"><img id="logo"src="assets/logo.png" alt="logo Gateaulitis"></a>
+        <a href="index.html" id="logolink"><img id="logo"src="assets/logo.png" alt="logo Gateaulitis"></a>
         <div class="navbar-right">
             <div id="links">
                 <a href="index.html">home</a>
@@ -52,12 +52,16 @@
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     </div>
     
+    <!-- content-->
     <div class="container-fluid cnt-info">
         <div class="row eerste-rij">
+            <!-- infoblok-->
             <div class="col-md-6 col-sm-12 txt-left">
                 <h2>Gateau - watte?</h2>
                 <p>Irrationele angst voor cupcakes en de vrolijke atmosfeer die ze uitstralen, veroorzaakt extreme paniekaanvallen. Als vzw willen wij de maatschappij bewuster maken van deze vrees, die nog te weinig erkend wordt. Met onze crowdfunding hopen we geld in te zamelen voor wetenschappelijke studies die deze suikerbommen nader zullen onderzoeken. Een tiende van het steungeld gaat naar onze werking om ondersteunende en bemoedigende activiteiten op touw te zetten voor alle slachtoffers.</p>
             </div>
+
+            <!-- kleurvlak + afbeelding-->
             <div class="col-md-6 img-right">
                 <div class="kleurvlak-rechts">
                     <img src="assets/info1.png" alt="">
@@ -66,17 +70,21 @@
         </div>
         
         <div class="row tweede-rij">
+            <!-- kleurvlak + afbeelding-->
             <div class="col-md-6 img-left">
                 <div class="kleurvlak-links">
                     <img class="img-left" src="assets/info2.png" alt="">
                 </div>
             </div>
+
+            <!-- oorzaken-->
             <div class="col-md-6 col-sm-12 txt-right">
                 <h2>Oorzaken</h2>
                 <p>Irrationele angst voor cupcakes en de vrolijke atmosfeer die ze uitstralen, veroorzaakt extreme paniekaanvallen. Als vzw willen wij de maatschappij bewuster maken van deze vrees, die nog te weinig erkend wordt. Met onze crowdfunding hopen we geld in te zamelen voor wetenschappelijke studies die deze suikerbommen nader zullen onderzoeken. Een tiende van het steungeld gaat naar onze werking om ondersteunende en bemoedigende activiteiten op touw te zetten voor alle slachtoffers.</p>
             </div>
         </div>
 
+        <!-- footer-->
         <div class="col-md-12 footer">
             Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
         </div>
