--- a/agenda.html
+++ b/agenda.html
@@ -55,6 +55,9 @@
     <!-- content-->
     <div class="container">
         <div class="row calender-row eerste-rij">
+            <div class="calender-img">
+                <img src="assets/cupcake4.png" alt="">
+            </div>
 
             <!-- eerste evenement-->
             <div class="col-md-3 offset-md-2 date">
@@ -103,7 +106,7 @@
 
         <!-- footer-->
         <div class="col-md-12 footer">
-            Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+            Gateaulitis - vzw Cupcake Crush | Robbe Haegeman | © 2018 Arteveldehogeschool Gent
         </div>
     </div>
 
