--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                 <div class="home-ill-div">
                     <img src="assets/cupcake1.png" alt="cupcake monster">
                 </div>
-
             </div>
 
             <!-- introtekst-->
@@ -78,9 +77,12 @@
             </div>
 
             <!-- footer-->
-            <div class="col-md-12 footer">
-                Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+            <div class="container">
+                <div class="col-md-12 footer">
+                    Gateaulitis - vzw Cupcake Crush | Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+                </div>
             </div>
+            
         </div>
     </div>
 </body>
