--- a/info.html
+++ b/info.html
@@ -58,36 +58,39 @@
             <!-- infoblok-->
             <div class="col-md-6 col-sm-12 txt-left">
                 <h2>Gateau - watte?</h2>
-                <p>Irrationele angst voor cupcakes en de vrolijke atmosfeer die ze uitstralen, veroorzaakt extreme paniekaanvallen. Als vzw willen wij de maatschappij bewuster maken van deze vrees, die nog te weinig erkend wordt. Met onze crowdfunding hopen we geld in te zamelen voor wetenschappelijke studies die deze suikerbommen nader zullen onderzoeken. Een tiende van het steungeld gaat naar onze werking om ondersteunende en bemoedigende activiteiten op touw te zetten voor alle slachtoffers.</p>
+                <p><img class="info-img-mobile-right" src="assets/info1.png" alt="cupcake monster question mark">Irrationele angst voor cupcakes en de vrolijke atmosfeer die ze uitstralen, veroorzaakt extreme paniekaanvallen. Als vzw willen wij de maatschappij bewuster maken van deze vrees, die nog te weinig erkend wordt. Met onze crowdfunding hopen we geld in te zamelen voor wetenschappelijke studies die deze suikerbommen nader zullen onderzoeken. Een tiende van het steungeld gaat naar onze werking om ondersteunende en bemoedigende activiteiten op touw te zetten voor alle slachtoffers.</p>
             </div>
 
             <!-- kleurvlak + afbeelding-->
-            <div class="col-md-6 img-right">
+            <div class="col-md-6 col-kleurvlak">
                 <div class="kleurvlak-rechts">
-                    <img src="assets/info1.png" alt="">
+                    <img class="img-right" src="assets/info2.png" alt="cupcake shapes">
                 </div>
             </div>
         </div>
         
         <div class="row tweede-rij">
             <!-- kleurvlak + afbeelding-->
-            <div class="col-md-6 img-left">
+            <div class="col-md-6 col-kleurvlak">
                 <div class="kleurvlak-links">
-                    <img class="img-left" src="assets/info2.png" alt="">
+                    <img class="img-left" src="assets/info1.png" alt="cupcake monster question mark">
                 </div>
             </div>
 
             <!-- oorzaken-->
             <div class="col-md-6 col-sm-12 txt-right">
                 <h2>Oorzaken</h2>
-                <p>Irrationele angst voor cupcakes en de vrolijke atmosfeer die ze uitstralen, veroorzaakt extreme paniekaanvallen. Als vzw willen wij de maatschappij bewuster maken van deze vrees, die nog te weinig erkend wordt. Met onze crowdfunding hopen we geld in te zamelen voor wetenschappelijke studies die deze suikerbommen nader zullen onderzoeken. Een tiende van het steungeld gaat naar onze werking om ondersteunende en bemoedigende activiteiten op touw te zetten voor alle slachtoffers.</p>
+                <p><img class="info-img-mobile-left" src="assets/info2.png" alt="cupcake shapes">Irrationele angst voor cupcakes en de vrolijke atmosfeer die ze uitstralen, veroorzaakt extreme paniekaanvallen. Als vzw willen wij de maatschappij bewuster maken van deze vrees, die nog te weinig erkend wordt. Met onze crowdfunding hopen we geld in te zamelen voor wetenschappelijke studies die deze suikerbommen nader zullen onderzoeken. Een tiende van het steungeld gaat naar onze werking om ondersteunende en bemoedigende activiteiten op touw te zetten voor alle slachtoffers.</p>
             </div>
         </div>
 
         <!-- footer-->
-        <div class="col-md-12 footer">
-            Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+        <div class="container">
+            <div class="col-md-12 footer">
+                Gateaulitis - vzw Cupcake Crush | Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+            </div>
         </div>
+        
     </div>
 
 
