--- a/tips.html
+++ b/tips.html
@@ -59,45 +59,45 @@
             <!-- tip1 + img-->
             <div class="col-md-6 col-sm-12 tip-txt" id="tip1">
                 <h1>Bakcursus</h1>
-                <p>Tijdens de bakcursus wordt je begeleidt tijdens het maken van cupcakes. Je leert alle ingrediënten kennen en zodoende geen schrik te hebben. Ze bestaan ten slotte maar uit ei, bloem en deeg, het zijn geen monsters. Uiteindelijk overwin je je angst door jouw grootste angst te verslinden. Eenmaal je hierover heen bent maak je buitengewoon lekker cupcakes met sublieme toppings en chocoladevulling. De bakcursus is in samenwerking met de KVLV.</p>
+                <p>Tijdens de bakcursus wordt je begeleidt tijdens het maken van cupcakes. Je leert alle ingrediënten kennen en zodoende geen schrik te hebben. Ze bestaan ten slotte maar uit ei, bloem en deeg, het zijn geen monsters. Uiteindelijk overwin je je angst door jouw grootste angst te verslinden. Eenmaal je hierover heen bent maak je buitengewoon lekker cupcakes met sublieme toppings en chocoladevulling. De bakcursus is in samenwerking met de KVLV.<img class="tip-img-mobile" src="assets/tip1.png" alt="tip bakcursus"></p>
             </div>
             <div class="col-md-6 tip-img">
-                <img src="assets/tip1.png" alt="tip1">
+                <img class="img-right" src="assets/tip1.png" alt="tip bakcursus">
             </div>
         </div>
         
         <div class="row">
             <!-- tip2 +img-->
             <div class="col-md-6 tip-img">
-                <img class="img-left" src="assets/tip2.png" alt="">
+                <img class="img-left" src="assets/tip2.png" alt="tip blootstelling">
             </div>
             <div class="col-md-6 col-sm-12 tip-txt" id="tip2">
                 <h1>Blootstelling</h1>
-                <p>Bij deze behandeling spelen psychologen in op je denkpatroon van de patiënt. Ze laten je inzien dat het angstgevoel het gevolg is van een verkeerde interpretatie van lichamelijke verschijnselen, zoals een versnelde hartslag. Door je (angst)beeld bij te stellen, krijg je een een meer realistischere interpretatie van je gedrag. Gedragstherapie bij een specifieke fobie is gericht op blootstelling aan het onderwerp, om zo de angstklachten te verminderen.</p>
+                <p>Bij deze behandeling spelen psychologen in op je denkpatroon van de patiënt. Ze laten je inzien dat het angstgevoel het gevolg is van een verkeerde interpretatie van lichamelijke verschijnselen, zoals een versnelde hartslag. Door je (angst)beeld bij te stellen, krijg je een een meer realistischere interpretatie van je gedrag. Gedragstherapie bij een specifieke fobie is gericht op blootstelling aan het onderwerp, om zo de angstklachten te verminderen.<img class="tip-img-mobile" src="assets/tip2.png" alt="tip blootstelling"></p>
             </div>
 
             <!-- tip3 + img-->
             <div class="col-md-6 col-sm-12 tip-txt" id="tip3">
                 <h1>Biofeedback</h1>
-                <p>Meten en verbeteren: dat is biofeedback. Verschillende functies van je lichaam kunnen worden gemeten: hoe snel en regelmatig je hart slaat, hoe snel je ademt, je bloeddruk, spierspanning en natuurlijk je hersenactiviteit. Hier krijg je pas te zien hoe confronterend je fobie wel is. Door verschillende fysieke oefeningen te doen, zal je leren jouw fysieke angstverschijnselen onder controle te krijgen.</p>
+                <p>Meten en verbeteren: dat is biofeedback. Verschillende functies van je lichaam kunnen worden gemeten: hoe snel en regelmatig je hart slaat, hoe snel je ademt, je bloeddruk, spierspanning en natuurlijk je hersenactiviteit. Hier krijg je pas te zien hoe confronterend je fobie wel is. Door verschillende fysieke oefeningen te doen, zal je leren jouw fysieke angstverschijnselen onder controle te krijgen.<img class="tip-img-mobile" src="assets/tip3.png" alt="tip biofeedback"></p>
             </div>
             <div class="col-md-6 tip-img">
-                <img src="assets/tip3.png" alt="tip3">
+                <img class="img-right" src="assets/tip3.png" alt="tip biofeedback">
             </div>
             
             <!-- tip4 + img-->
-            <div class="col-md-6 tip-img">
-                <img class="img-left" src="assets/tip4.png" alt="">
+            <div class="col-md-6 col-sm-6 tip-img">
+                <img class="img-left" src="assets/tip4.png" alt="tip hulpgroep">
             </div>
             <div class="col-md-6 col-sm-12 tip-txt" id="tip4">
                 <h1>Hulpgroep</h1>
-                <p>Praten helpt. Daarom blies vzw Cupcake Crush een hulpgroep in het leven waar je je ervaringen kan delen met lotgenoten. De bijeenkomsten worden georganiseerd in alle Belgische grootsteden en vinden meermaals per maand plaats. Check de Agenda om up to date te blijven. Familieleden van slachtoffers zijn uiteraard ook welkom.</p>
+                <p>Praten helpt. Daarom blies vzw Cupcake Crush een hulpgroep in het leven waar je je ervaringen kan delen met lotgenoten. De bijeenkomsten worden georganiseerd in alle Belgische grootsteden en vinden meermaals per maand plaats. Check de Agenda om up to date te blijven. Familieleden van slachtoffers zijn uiteraard ook welkom.<img class="tip-img-mobile" src="assets/tip4.png" alt="tip hulpgroep"></p>
             </div>
         </div>
 
         <!-- footer-->
         <div class="col-md-12 footer">
-            Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+                Gateaulitis - vzw Cupcake Crush | Robbe Haegeman | © 2018 Arteveldehogeschool Gent
         </div>
     </div>
 
