--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -54,7 +54,7 @@
     
     <!-- crowdfunding-->
     <div class="container">
-        <div class="row eerste-rij">
+        <div class="row row-crwdf eerste-rij">
             <!-- info crowdfunding-->
             <div class="col-lg-8 col-md-12 info-crowdfunding">
                 <h2>Crowdfunding</h2>
@@ -126,37 +126,8 @@
 
                     <!-- COUNTDOWN TIMER -->
                     <div id="countdown">
-                        <p id="demo"></p>
-                        <script>
-                        // Set the date we're counting down to
-                        var countDownDate = new Date("Jan 28, 2019 16:00:00").getTime();
-
-                        // Update the count down every 1 second
-                        var x = setInterval(function() {
-
-                        // Get todays date and time
-                        var now = new Date().getTime();
-
-                        // Find the distance between now and the count down date
-                        var distance = countDownDate - now;
-
-                        // Time calculations for days, hours, minutes and seconds
-                        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                        // Display the result in the element with id="demo"
-                        document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-                        + minutes + "m " + seconds + "s ";
-
-                        // If the count down is finished, write some text 
-                        if (distance < 0) {
-                            clearInterval(x);
-                            document.getElementById("demo").innerHTML = "EXPIRED";
-                        }
-                        }, 1000);
-                        </script>
+                        <p id="timer"></p>
+                        
                     </div>
 
                     <h3>te gaan</h3>
@@ -167,7 +138,7 @@
 
         <!-- footer-->
         <div class="col-md-12 footer">
-            Disclaimer| Robbe Haegeman | © 2018 Arteveldehogeschool Gent
+                Gateaulitis - vzw Cupcake Crush | Robbe Haegeman | © 2018 Arteveldehogeschool Gent
         </div>
     </div>
 
